# Hackathon_In_Class

./: .env  .gitignore  README.md  docusaurus.config.mjs  docusaurus.config.ts  package-lock.json  package.json  sidebars.mjs  sitemap.xml  tsconfig.json
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .env  README.md  agent.py  analyze_chunks.py  check_count.py  main.py  phr_generator.py  pyproject.toml  requirements.txt  retrieving.py  test_xml_chunk_saving.py
backend/embedding_pipeline.egg-info/: PKG-INFO  SOURCES.txt
backend/tests/: test_agent.py  test_main.py  test_retrieving.py
history/prompts/001-embedding-pipeline/: 2-embedding-pipeline-plan.plan.prompt.md  3-embedding-pipeline-tasks.tasks.prompt.md  4-embedding-pipeline-tasks-regen.tasks.prompt.md  5-embedding-pipeline-implementation.implementation.prompt.md
history/prompts/002-embedding-pipeline/: 1766253296167-embedding-pipeline-planning.plan.prompt.md  1766253907616-embedding-pipeline-tasks.tasks.prompt.md  (+1 more)
specs/001-embedding-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-embedding-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-rag-retrieval-testing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-rag-fastapi-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-rag-ui-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md
src/pages/: index.tsx
(+33 files in other folders)
